feat: Add Volunteer Gear Discounts page and switch contact form to Google Forms

--- a/calendar.html
+++ b/calendar.html
@@ -13,10 +13,30 @@
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap"
         rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap"
+        rel="stylesheet">
+
+    <!-- Favicon -->
     <link rel="icon" type="image/png" href="assets/images/troop93_logo.png">
 
     <!-- Styles -->
     <link rel="stylesheet" href="css/style.css">
+
+    <style>
+        .calendar-subscribe-btn {
+            width: 100%;
+            justify-content: center;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+        }
+
+        @media (min-width: 768px) {
+            .calendar-subscribe-btn {
+                width: auto;
+            }
+        }
+    </style>
     <style>
         .calendar-container {
             width: 100%;
@@ -41,14 +61,14 @@
     <!-- Header -->
     <header id="main-header">
         <div class="container flex items-center justify-between" style="height: 5rem;">
-            <div class="flex items-center gap-3">
+            <a href="index.html" class="flex items-center gap-3" style="text-decoration: none; color: inherit;">
                 <div
                     style="width: 2.5rem; height: 2.5rem; display: flex; align-items: center; justify-content: center; overflow: hidden;">
                     <img src="assets/images/troop93_logo.png" alt="Troop 93 Logo"
                         style="width: 100%; height: 100%; object-fit: contain;">
                 </div>
                 <h2 style="font-size: 1.25rem; font-weight: 800; letter-spacing: -0.025em;">Troop 93</h2>
-            </div>
+            </a>
 
             <nav class="hidden md-flex items-center gap-8">
                 <a href="index.html" class="nav-link">Home</a>
@@ -82,20 +102,42 @@
         </div>
 
         <!-- TroopWebHost Integration -->
-        <div class="calendar-container">
-            <!-- Using TroopWebHost Calendar Embed -->
-            <iframe src="https://www.TroopWebHost.org/Calendar.aspx?a=2967&u=881458&z=28"
-                title="Troop 93 Calendar"></iframe>
+        <!-- Calendar Subscription Section -->
+        <!-- Google Calendar Embed -->
+        <div class="calendar-container" style="margin-bottom: 4rem;">
+            <iframe
+                src="https://calendar.google.com/calendar/embed?src=858qgufmlvdgre25qr90cj792btf2mcc%40import.calendar.google.com&ctz=America%2FLos_Angeles"
+                style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
         </div>
 
-        <div style="margin-top: 3rem; text-align: center;">
-            <p style="color: var(--slate-500); font-size: 0.875rem; margin-bottom: 1.5rem;">Want to sync this to your
-                phone?</p>
-            <a href="https://www.TroopWebHost.org/iCalendar.aspx?a=2967&u=881458&z=28" class="btn-secondary"
-                style="background: var(--white); color: var(--forest); border-color: rgba(13,27,18,0.1); display: inline-flex; align-items: center; gap: 0.5rem;">
-                <span class="material-symbols-outlined">sync</span>
-                Get iCalendar Feed
-            </a>
+        <!-- Calendar Subscription Section -->
+        <div style="max-width: 48rem; margin: 0 auto; text-align: center;">
+            <div class="card" style="padding: 3rem;">
+                <span class="material-symbols-outlined"
+                    style="font-size: 3rem; color: var(--primary); margin-bottom: 1.5rem;">calendar_month</span>
+                <h2 style="font-size: 1.5rem; margin-bottom: 1rem;">Subscribe to Troop Calendar</h2>
+                <p style="color: var(--slate-600); margin-bottom: 2rem; line-height: 1.6;">
+                    Subscribe to our calendar to sync all upcoming events, meetings, and activities directly to your
+                    personal device.
+                </p>
+
+                <div class="flex flex-col md-flex-row items-center justify-center gap-4">
+                    <a href="webcal://calendar.google.com/calendar/ical/858qgufmlvdgre25qr90cj792btf2mcc%40import.calendar.google.com/public/basic.ics"
+                        class="btn-primary calendar-subscribe-btn">
+                        <span class="material-symbols-outlined">sync</span>
+                        Subscribe (WebCal)
+                    </a>
+                    <a href="https://calendar.google.com/calendar/ical/858qgufmlvdgre25qr90cj792btf2mcc%40import.calendar.google.com/public/basic.ics"
+                        class="btn-secondary calendar-subscribe-btn">
+                        <span class="material-symbols-outlined">download</span>
+                        Download .ics File
+                    </a>
+                </div>
+                <p style="font-size: 0.875rem; color: var(--slate-500); margin-top: 2rem;">
+                    <strong>Note:</strong> WebCal links work best with Apple Calendar, Outlook, and Google Calendar. If
+                    clicking "Subscribe" doesn't work, try downloading the .ics file.
+                </p>
+            </div>
         </div>
 
     </main>
@@ -113,6 +155,10 @@
                         Scouting is more than just camping. It's about personal growth, community service, and
                         discovering what it means to be a leader.
                     </p>
+                    <p style="color: rgba(255,255,255,0.6); font-size: 0.875rem; line-height: 1.6; margin-top: 1rem;">
+                        We meet every Tuesday evening. Prospective scouts and their families are always welcome to
+                        observe a meeting.
+                    </p>
                 </div>
 
                 <div>
@@ -121,7 +167,10 @@
                         <div class="flex items-start gap-3">
                             <span class="material-symbols-outlined"
                                 style="color: var(--primary); font-size: 1.25rem;">location_on</span>
-                            <p class="footer-link">Kiwanis Youth Park<br>386 W Truslow Ave, Fullerton, CA 92832</p>
+                            <a href="https://www.google.com/maps/place/Kiwanis+Youth+Park+Scout+Troop+93/@33.8670339,-117.9315788,16z/data=!4m6!3m5!1s0x80dd2a05f20e7d2f:0xb55b974375d687c4!8m2!3d33.867123!4d-117.9320613!16s%2Fg%2F1tscp9pb?entry=ttu&g_ep=EgoyMDI2MDIwOS4wIKXMDSoASAFQAw%3D%3D"
+                                target="_blank" class="footer-link" style="text-align: left; display: block;">Kiwanis
+                                Youth Park<br>386
+                                W Truslow Ave, Fullerton, CA 92832</a>
                         </div>
                         <div class="flex items-start gap-3">
                             <span class="material-symbols-outlined"
@@ -143,14 +192,6 @@
                 </div>
 
                 <div style="text-align: right;">
-                    <div
-                        style="background-color: rgba(17,212,17,0.1); border: 1px solid rgba(17,212,17,0.3); padding: 1.5rem; border-radius: 1rem; display: inline-block;">
-                        <span
-                            style="color: var(--primary); font-size: 2.25rem; font-weight: 900; display: block;">1922</span>
-                        <span
-                            style="font-size: 0.75rem; font-weight: 700; text-transform: uppercase; letter-spacing: 0.1em; opacity: 0.7;">Established
-                            Year</span>
-                    </div>
                 </div>
             </div>
 
