--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
     <!-- Header -->
     <header id="main-header">
         <div class="container flex items-center justify-between" style="height: 5rem;">
-            <div class="flex items-center gap-3">
+            <a href="index.html" class="flex items-center gap-3" style="text-decoration: none; color: inherit;">
                 <div
                     style="width: 2.5rem; height: 2.5rem; display: flex; align-items: center; justify-content: center; overflow: hidden;">
                     <img src="assets/images/troop93_logo.png" alt="Troop 93 Logo"
                         style="width: 100%; height: 100%; object-fit: contain;">
                 </div>
                 <h2 style="font-size: 1.25rem; font-weight: 800; letter-spacing: -0.025em;">Troop 93</h2>
-            </div>
+            </a>
 
             <nav class="hidden md-flex items-center gap-8">
-                <a href="index.html" class="nav-link" style="color: var(--primary);">Home</a>
+                <a href="index.html" class="nav-link" style="color: var(--moss); font-weight: 800;">Home</a>
                 <a href="about.html" class="nav-link">About Us</a>
                 <a href="leadership.html" class="nav-link">Leadership</a>
                 <a href="eagles.html" class="nav-link">Eagle Scouts</a>
@@ -91,66 +91,16 @@
                     style="border-bottom: 1px solid rgba(13,27,18,0.05); padding-bottom: 1.5rem; margin-bottom: 2rem;">
                     <div>
                         <h2 style="font-size: 1.875rem;">Upcoming Adventures</h2>
-                        <p style="color: var(--moss); font-weight: 500; margin-top: 0.25rem;">Gear up for our next
-                            outings</p>
+                        <p style="color: var(--moss); font-weight: 500; margin-top: 0.25rem;">Never miss an adventure.
+                            Below you'll find our troop's upcoming events, meetings, and special activities.</p>
                     </div>
-                    <a href="calendar.html"
-                        style="font-weight: 700; font-size: 0.875rem; display: flex; align-items: center; gap: 0.25rem;">
-                        View Calendar <span class="material-symbols-outlined"
-                            style="font-size: 1.25rem;">arrow_forward</span>
-                    </a>
                 </div>
 
-                <div class="flex flex-col gap-6">
-                    <!-- Adventure Card 1 -->
-                    <div class="card flex flex-col md-flex-row gap-6">
-                        <div
-                            style="width: 12rem; height: 8rem; border-radius: 0.75rem; overflow: hidden; flex-shrink: 0;">
-                            <img src="https://lh3.googleusercontent.com/aida-public/AB6AXuDkTJts-7JaDGJoKcVXAfUZgnkLqhO6AHdTTek1x7hkCaT0I5RbQGU2dvOy_Qmsm0Vdr-jJqom_kNshdz79BLDbhgWfxENh7662ZkmP6B0S2OOlmB-AaCdxYV27Yt-qPvY8gf1HtozmqjHsh4cUZ6ceuPXREH_JAXxVpD-97fPL3iOXRuCfScXRuD4dIhyZe7SNU4JGGV74UIxjl8kDFhzBnYpwQKlgno7D8uLiH5puRa-zHpFjfGOU5ALEWtLYumTUab3ahl7TVPE"
-                                style="width: 100%; height: 100%; object-fit: cover;">
-                        </div>
-                        <div>
-                            <div class="flex items-center gap-2" style="margin-bottom: 0.5rem;">
-                                <span
-                                    style="background: rgba(17,212,17,0.1); color: var(--forest); font-size: 0.75rem; font-weight: 700; padding: 0.25rem 0.5rem; border-radius: 1rem;">High
-                                    Adventure</span>
-                                <span
-                                    style="color: var(--moss); font-size: 0.75rem; font-weight: 700; text-transform: uppercase; letter-spacing: 0.05em;">July
-                                    15 - 21</span>
-                            </div>
-                            <h3 style="font-size: 1.25rem; margin-bottom: 0.5rem;">Summer Camp 2024</h3>
-                            <p
-                                style="font-size: 0.875rem; opacity: 0.7; overflow: hidden; display: -webkit-box; -webkit-line-clamp: 2; line-clamp: 2; -webkit-box-orient: vertical;">
-                                A week-long adventure in the High Sierra focused on merit badges, swimming, and
-                                wilderness survival skills.
-                            </p>
-                        </div>
-                    </div>
-
-                    <!-- Adventure Card 2 -->
-                    <div class="card flex flex-col md-flex-row gap-6">
-                        <div
-                            style="width: 12rem; height: 8rem; border-radius: 0.75rem; overflow: hidden; flex-shrink: 0;">
-                            <img src="https://lh3.googleusercontent.com/aida-public/AB6AXuBwdZimguBefw5O0Yb5e0YeCz_VZM58fIn_YOFT7mmSt2t_BfyY9Cm9vbukt93aAunJ25ycMsNlzaokSsaf76lb2s80kKl67uCngLGsrRT6t0JIqjR3K8DEhdigoQHbMDDOXlrzNRcOwgYjc3cNtkTq9slxCnF8u83h-6OCKZflqP9Zwi8KkAzPVn5oWvmX-FnYQxFAf-UB2sfQ-7ua7xEQjOR6RPueRckjQLgho6VvpdS4zGJmWPSxozSKfWKzJNtuKD7VKomWvq8"
-                                style="width: 100%; height: 100%; object-fit: cover;">
-                        </div>
-                        <div>
-                            <div class="flex items-center gap-2" style="margin-bottom: 0.5rem;">
-                                <span
-                                    style="background: rgba(17,212,17,0.1); color: var(--forest); font-size: 0.75rem; font-weight: 700; padding: 0.25rem 0.5rem; border-radius: 1rem;">Water
-                                    Sports</span>
-                                <span
-                                    style="color: var(--moss); font-size: 0.75rem; font-weight: 700; text-transform: uppercase; letter-spacing: 0.05em;">August
-                                    10</span>
-                            </div>
-                            <h3 style="font-size: 1.25rem; margin-bottom: 0.5rem;">Crystal Lake Kayaking</h3>
-                            <p
-                                style="font-size: 0.875rem; opacity: 0.7; overflow: hidden; display: -webkit-box; -webkit-line-clamp: 2; line-clamp: 2; -webkit-box-orient: vertical;">
-                                Master paddling techniques and explore the pristine waters of Crystal Lake. Open to all
-                                ranks.
-                            </p>
-                        </div>
-                    </div>
+                <div class="calendar-container"
+                    style="width: 100%; overflow: hidden; border-radius: 1rem; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);">
+                    <iframe
+                        src="https://calendar.google.com/calendar/embed?height=600&wkst=2&ctz=America%2FLos_Angeles&showPrint=0&showTitle=0&showNav=0&showCalendars=0&showTz=0&mode=AGENDA&src=ODU4cWd1Zm1sdmRncmUyNXFyOTBjajc5MmJ0ZjJtY2NAaW1wb3J0LmNhbGVuZGFyLmdvb2dsZS5jb20&color=%23e4c441"
+                        style="border-width:0; width: 100%; height: 600px;" frameborder="0" scrolling="no"></iframe>
                 </div>
             </div>
 
@@ -213,6 +163,10 @@
                         Scouting is more than just camping. It's about personal growth, community service, and
                         discovering what it means to be a leader.
                     </p>
+                    <p style="color: rgba(255,255,255,0.6); font-size: 0.875rem; line-height: 1.6; margin-top: 1rem;">
+                        We meet every Tuesday evening. Prospective scouts and their families are always welcome to
+                        observe a meeting.
+                    </p>
                 </div>
 
                 <div>
@@ -221,7 +175,10 @@
                         <div class="flex items-start gap-3">
                             <span class="material-symbols-outlined"
                                 style="color: var(--primary); font-size: 1.25rem;">location_on</span>
-                            <p class="footer-link">Kiwanis Youth Park<br>386 W Truslow Ave, Fullerton, CA 92832</p>
+                            <a href="https://www.google.com/maps/place/Kiwanis+Youth+Park+Scout+Troop+93/@33.8670339,-117.9315788,16z/data=!4m6!3m5!1s0x80dd2a05f20e7d2f:0xb55b974375d687c4!8m2!3d33.867123!4d-117.9320613!16s%2Fg%2F1tscp9pb?entry=ttu&g_ep=EgoyMDI2MDIwOS4wIKXMDSoASAFQAw%3D%3D"
+                                target="_blank" class="footer-link" style="text-align: left; display: block;">Kiwanis
+                                Youth Park<br>386
+                                W Truslow Ave, Fullerton, CA 92832</a>
                         </div>
                         <div class="flex items-start gap-3">
                             <span class="material-symbols-outlined"
@@ -243,14 +200,6 @@
                 </div>
 
                 <div style="text-align: right;">
-                    <div
-                        style="background-color: rgba(17,212,17,0.1); border: 1px solid rgba(17,212,17,0.3); padding: 1.5rem; border-radius: 1rem; display: inline-block;">
-                        <span
-                            style="color: var(--primary); font-size: 2.25rem; font-weight: 900; display: block;">1922</span>
-                        <span
-                            style="font-size: 0.75rem; font-weight: 700; text-transform: uppercase; letter-spacing: 0.1em; opacity: 0.7;">Established
-                            Year</span>
-                    </div>
                 </div>
             </div>
 
@@ -267,6 +216,8 @@
         </div>
     </footer>
 
+    <script src="js/config.js"></script>
+    <!-- <script src="js/home-events.js"></script> -->
     <script src="js/main.js"></script>
 </body>
 
