--- a/join.html
+++ b/join.html
@@ -28,14 +28,14 @@
     <!-- Header -->
     <header id="main-header">
         <div class="container flex items-center justify-between" style="height: 5rem;">
-            <div class="flex items-center gap-3">
+            <a href="index.html" class="flex items-center gap-3" style="text-decoration: none; color: inherit;">
                 <div
                     style="width: 2.5rem; height: 2.5rem; display: flex; align-items: center; justify-content: center; overflow: hidden;">
                     <img src="assets/images/troop93_logo.png" alt="Troop 93 Logo"
                         style="width: 100%; height: 100%; object-fit: contain;">
                 </div>
                 <h2 style="font-size: 1.25rem; font-weight: 800; letter-spacing: -0.025em;">Troop 93</h2>
-            </div>
+            </a>
 
             <nav class="hidden md-flex items-center gap-8">
                 <a href="index.html" class="nav-link">Home</a>
@@ -172,6 +172,10 @@
                         Scouting is more than just camping. It's about personal growth, community service, and
                         discovering what it means to be a leader.
                     </p>
+                    <p style="color: rgba(255,255,255,0.6); font-size: 0.875rem; line-height: 1.6; margin-top: 1rem;">
+                        We meet every Tuesday evening. Prospective scouts and their families are always welcome to
+                        observe a meeting.
+                    </p>
                 </div>
 
                 <div>
@@ -180,7 +184,10 @@
                         <div class="flex items-start gap-3">
                             <span class="material-symbols-outlined"
                                 style="color: var(--primary); font-size: 1.25rem;">location_on</span>
-                            <p class="footer-link">Kiwanis Youth Park<br>386 W Truslow Ave, Fullerton, CA 92832</p>
+                            <a href="https://www.google.com/maps/place/Kiwanis+Youth+Park+Scout+Troop+93/@33.8670339,-117.9315788,16z/data=!4m6!3m5!1s0x80dd2a05f20e7d2f:0xb55b974375d687c4!8m2!3d33.867123!4d-117.9320613!16s%2Fg%2F1tscp9pb?entry=ttu&g_ep=EgoyMDI2MDIwOS4wIKXMDSoASAFQAw%3D%3D"
+                                target="_blank" class="footer-link" style="text-align: left; display: block;">Kiwanis
+                                Youth Park<br>386
+                                W Truslow Ave, Fullerton, CA 92832</a>
                         </div>
                         <div class="flex items-start gap-3">
                             <span class="material-symbols-outlined"
@@ -202,14 +209,6 @@
                 </div>
 
                 <div style="text-align: right;">
-                    <div
-                        style="background-color: rgba(17,212,17,0.1); border: 1px solid rgba(17,212,17,0.3); padding: 1.5rem; border-radius: 1rem; display: inline-block;">
-                        <span
-                            style="color: var(--primary); font-size: 2.25rem; font-weight: 900; display: block;">1922</span>
-                        <span
-                            style="font-size: 0.75rem; font-weight: 700; text-transform: uppercase; letter-spacing: 0.1em; opacity: 0.7;">Established
-                            Year</span>
-                    </div>
                 </div>
             </div>
 
