--- a/gallery.html
+++ b/gallery.html
@@ -104,21 +104,21 @@
     <!-- Header -->
     <header id="main-header">
         <div class="container flex items-center justify-between" style="height: 5rem;">
-            <div class="flex items-center gap-3">
+            <a href="index.html" class="flex items-center gap-3" style="text-decoration: none; color: inherit;">
                 <div
                     style="width: 2.5rem; height: 2.5rem; display: flex; align-items: center; justify-content: center; overflow: hidden;">
                     <img src="assets/images/troop93_logo.png" alt="Troop 93 Logo"
                         style="width: 100%; height: 100%; object-fit: contain;">
                 </div>
                 <h2 style="font-size: 1.25rem; font-weight: 800; letter-spacing: -0.025em;">Troop 93</h2>
-            </div>
+            </a>
 
             <nav class="hidden md-flex items-center gap-8">
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="about.html" class="nav-link">About Us</a>
                 <a href="leadership.html" class="nav-link">Leadership</a>
                 <a href="eagles.html" class="nav-link">Eagle Scouts</a>
-                <a href="gallery.html" class="nav-link" style="color: var(--primary);">Gallery</a>
+                <a href="gallery.html" class="nav-link" style="color: var(--moss); font-weight: 800;">Gallery</a>
                 <a href="resources.html" class="nav-link">Resources</a>
                 <a href="contact.html" class="nav-link">Contact</a>
             </nav>
@@ -155,90 +155,11 @@
         </div>
 
         <!-- Photo Grid -->
-        <div class="masonry-grid">
-            <!-- Photo 1 -->
-            <div class="masonry-item">
-                <div class="photo-card">
-                    <img src="https://lh3.googleusercontent.com/aida-public/AB6AXuBYW7tShodu90i84d_1T0wifiQwo-d18Nb1VMtO-C-7nz22IAQczxNHiBYawP8EGY_wDX13FBjtVC8xX87zlJIVIse9qU0EDm7PGIT1KUx_OMVCseUKiHbP_lQCpXonRjTcqbvmoFh6Rk-qPVgFSTClY22Tn2chCT0kQ63Psw-Ewe42ldeg8EDsSPd1RpBIyQ981HhFRUBXrQ6e0MfKgZzbHqiOA0mIH1md6NbFR6HI94SgU9u3SpPBCShpqPBafHXdooy3BAKL0nE"
-                        alt="High Adventure">
-                    <div class="photo-overlay">
-                        <span
-                            style="font-size: 0.65rem; font-weight: 800; color: var(--primary); text-transform: uppercase; letter-spacing: 0.1em; margin-bottom: 0.25rem;">High
-                            Adventure</span>
-                        <h3 style="font-size: 1.25rem; font-weight: 800;">Philmont Scout Ranch</h3>
-                        <p style="font-size: 0.875rem; opacity: 0.7;">Summer 2023</p>
-                    </div>
-                </div>
-            </div>
-            <!-- Photo 2 -->
-            <div class="masonry-item">
-                <div class="photo-card">
-                    <img src="https://lh3.googleusercontent.com/aida-public/AB6AXuDpfvu_TQ8xLcoPEU056mtELfCQtAbC9sSD8QCWi7_0AcsvpoefJnj9zot27yBmIO50BJUh_-kLwwcI2vcIJQNkVQ2kZzMp3F9b0aTsVhjqpoJ5DnfJwrTkyjPSlF25CIhL5CWWpdkUAVFwXuPYRRhqEyuM8ZZKdDUd5m3bXMVrGoyPgGJ7aIsLv127OhHDUiUrYYWYzlmPDU_7CylM_NtoMm2qLV2UxdpyYP6tadlLy4SzN3DnjOdWx5txpGkxF3v4BtkkVJsPpig"
-                        alt="Service Project">
-                    <div class="photo-overlay">
-                        <span
-                            style="font-size: 0.65rem; font-weight: 800; color: var(--primary); text-transform: uppercase; letter-spacing: 0.1em; margin-bottom: 0.25rem;">Service
-                            Projects</span>
-                        <h3 style="font-size: 1.25rem; font-weight: 800;">Earth Day Forest Restoration</h3>
-                        <p style="font-size: 0.875rem; opacity: 0.7;">Spring 2024</p>
-                    </div>
-                </div>
-            </div>
-            <!-- Photo 3 -->
-            <div class="masonry-item">
-                <div class="photo-card">
-                    <img src="https://lh3.googleusercontent.com/aida-public/AB6AXuBwwIn1OJFlcyldhS5jVX5hIRwfnzQb9pK-4meehjQXfD4TnTny4qM5_lBOTMevBvXhwiyJYd81RkkMIIk8e4Y_gXXhUMGFP7mPIU37lbUQg6vDC32hWsp5rmLWMkzpo51_PumLrG_aUukEJ7G8uEMfiXRsmU6A2D-gFTauMrrbAvWVRlTmiv9oXXYEMIQ3LNRzCjCxV2IbefCEdeJnZDT80pxKDUFxRrXCaU2sqa3z_1aA56xfyDX52DAOW3DkeBbeoTSYpfK1D2s"
-                        alt="Summer Camp">
-                    <div class="photo-overlay">
-                        <span
-                            style="font-size: 0.65rem; font-weight: 800; color: var(--primary); text-transform: uppercase; letter-spacing: 0.1em; margin-bottom: 0.25rem;">Summer
-                            Camp</span>
-                        <h3 style="font-size: 1.25rem; font-weight: 800;">Closing Campfire Ceremony</h3>
-                        <p style="font-size: 0.875rem; opacity: 0.7;">August 2023</p>
-                    </div>
-                </div>
-            </div>
-            <!-- Photo 4 -->
-            <div class="masonry-item">
-                <div class="photo-card">
-                    <img src="https://lh3.googleusercontent.com/aida-public/AB6AXuDZj92GOwM2Rr_WmkatShpPtXHiVng1bErmhCc3uhy9_6MbOEaw02TZkK72aXuzAmlWAHDB2OJPK9l1SWBpuvxjB4ZmYJ6eC_IDJQ2V5Pow2wGE2PpGzaUYow-mHM7wpay2S4ZG4Jwk-X9kjOYXVS7Qg59TNujhx9lEVpJS1ZrLQntx-PX6O4YzQXXO3Tq42DCYo9QZzUfFPs-pe9RGRPMXB8xinTnnQpMgSoRRqm6_c1rraCQJSAnAMDOVXRzbFYmKMJtd8NdQlvI"
-                        alt="Kayaking">
-                    <div class="photo-overlay">
-                        <span
-                            style="font-size: 0.65rem; font-weight: 800; color: var(--primary); text-transform: uppercase; letter-spacing: 0.1em; margin-bottom: 0.25rem;">High
-                            Adventure</span>
-                        <h3 style="font-size: 1.25rem; font-weight: 800;">Northern Tier Expedition</h3>
-                        <p style="font-size: 0.875rem; opacity: 0.7;">July 2023</p>
-                    </div>
-                </div>
-            </div>
-            <!-- Photo 5 -->
-            <div class="masonry-item">
-                <div class="photo-card">
-                    <img src="https://lh3.googleusercontent.com/aida-public/AB6AXuB_qYJMA019Ojz4XFYsYkGbt2ZdK4lVRmv4jqqo0-LbtqVpYYyu-rGqsW3v2ftSAFB45SJNG5jmAM35Tdek8rSvV_AZr9EX_zlXWyvVXJmdXEa0PYv0ouL8ezRILspyAptYILteHM9nh_8huh25bnScs0-QC9RoR4rX5IkGi-nwIkl7vXCgguVKoR3rqrYrfHiz3GWc4S0SG1HAr31vZyPXPwc3vtKpi0pu02YJ0MuEIMYzAMf7-Xo94M4RiLRSg_18MPsm5xJC3VI"
-                        alt="Workshop">
-                    <div class="photo-overlay">
-                        <span
-                            style="font-size: 0.65rem; font-weight: 800; color: var(--primary); text-transform: uppercase; letter-spacing: 0.1em; margin-bottom: 0.25rem;">Troop
-                            Meetings</span>
-                        <h3 style="font-size: 1.25rem; font-weight: 800;">Woodwork Merit Badge</h3>
-                        <p style="font-size: 0.875rem; opacity: 0.7;">Winter 2024</p>
-                    </div>
-                </div>
-            </div>
-            <!-- Photo 6 -->
-            <div class="masonry-item">
-                <div class="photo-card">
-                    <img src="https://lh3.googleusercontent.com/aida-public/AB6AXuD9nVLrYhcs5Sd02QafXJNpzP6Pu5rABIXoGgKlt8T2ElMdu9pBnF64qSP7XI8Fz4TlxRh-Nu_z9O1CE1eB674k--9O4mXz5ckx2TJDmEVk-IaE7-OFuy9OasSlgCXkBMSbfepF49Zorq_MmRWlsMGU-H0xcD4xZb9IkT1H1Tgd0CPFQM0hHuMAgUZIwS9M80cYvt7PzSrG5TLDN94DqifqvFQME-u0Ha3L3DRQ77cTzAH2rv3frWdjX-eZehevZZB_Dqrz_eocQAI"
-                        alt="Ceremony">
-                    <div class="photo-overlay">
-                        <span
-                            style="font-size: 0.65rem; font-weight: 800; color: var(--primary); text-transform: uppercase; letter-spacing: 0.1em; margin-bottom: 0.25rem;">Summer
-                            Camp</span>
-                        <h3 style="font-size: 1.25rem; font-weight: 800;">Morning Colors</h3>
-                        <p style="font-size: 0.875rem; opacity: 0.7;">June 2023</p>
-                    </div>
-                </div>
+        <div id="gallery-grid" class="masonry-grid">
+            <!-- Albums will be loaded here dynamically by js/gallery.js -->
+            <div class="col-span-full text-center py-12">
+                <span class="material-symbols-outlined animate-spin text-4xl text-primary mb-4">refresh</span>
+                <p class="text-slate-500">Loading albums...</p>
             </div>
         </div>
 
@@ -265,6 +186,10 @@
                         Scouting is more than just camping. It's about personal growth, community service, and
                         discovering what it means to be a leader.
                     </p>
+                    <p style="color: rgba(255,255,255,0.6); font-size: 0.875rem; line-height: 1.6; margin-top: 1rem;">
+                        We meet every Tuesday evening. Prospective scouts and their families are always welcome to
+                        observe a meeting.
+                    </p>
                 </div>
 
                 <div>
@@ -273,7 +198,10 @@
                         <div class="flex items-start gap-3">
                             <span class="material-symbols-outlined"
                                 style="color: var(--primary); font-size: 1.25rem;">location_on</span>
-                            <p class="footer-link">Kiwanis Youth Park<br>386 W Truslow Ave, Fullerton, CA 92832</p>
+                            <a href="https://www.google.com/maps/place/Kiwanis+Youth+Park+Scout+Troop+93/@33.8670339,-117.9315788,16z/data=!4m6!3m5!1s0x80dd2a05f20e7d2f:0xb55b974375d687c4!8m2!3d33.867123!4d-117.9320613!16s%2Fg%2F1tscp9pb?entry=ttu&g_ep=EgoyMDI2MDIwOS4wIKXMDSoASAFQAw%3D%3D"
+                                target="_blank" class="footer-link" style="text-align: left; display: block;">Kiwanis
+                                Youth Park<br>386
+                                W Truslow Ave, Fullerton, CA 92832</a>
                         </div>
                         <div class="flex items-start gap-3">
                             <span class="material-symbols-outlined"
@@ -295,14 +223,6 @@
                 </div>
 
                 <div style="text-align: right;">
-                    <div
-                        style="background-color: rgba(17,212,17,0.1); border: 1px solid rgba(17,212,17,0.3); padding: 1.5rem; border-radius: 1rem; display: inline-block;">
-                        <span
-                            style="color: var(--primary); font-size: 2.25rem; font-weight: 900; display: block;">1922</span>
-                        <span
-                            style="font-size: 0.75rem; font-weight: 700; text-transform: uppercase; letter-spacing: 0.1em; opacity: 0.7;">Established
-                            Year</span>
-                    </div>
                 </div>
             </div>
 
@@ -320,6 +240,7 @@
     </footer>
 
     <script src="js/main.js"></script>
+    <script src="js/gallery.js"></script>
 </body>
 
 </html>
