--- a/resources/join-bsa.html
+++ b/resources/join-bsa.html
@@ -25,14 +25,14 @@
     <!-- Header -->
     <header id="main-header">
         <div class="container flex items-center justify-between" style="height: 5rem;">
-            <div class="flex items-center gap-3">
+            <a href="../index.html" class="flex items-center gap-3" style="text-decoration: none; color: inherit;">
                 <div
                     style="width: 2.5rem; height: 2.5rem; display: flex; align-items: center; justify-content: center; overflow: hidden;">
                     <img src="../assets/images/troop93_logo.png" alt="Troop 93 Logo"
                         style="width: 100%; height: 100%; object-fit: contain;">
                 </div>
                 <h2 style="font-size: 1.25rem; font-weight: 800; letter-spacing: -0.025em;">Troop 93</h2>
-            </div>
+            </a>
 
             <nav class="hidden md-flex items-center gap-8">
                 <a href="../index.html" class="nav-link">Home</a>
@@ -40,7 +40,7 @@
                 <a href="../leadership.html" class="nav-link">Leadership</a>
                 <a href="../eagles.html" class="nav-link">Eagle Scouts</a>
                 <a href="../gallery.html" class="nav-link">Gallery</a>
-                <a href="../resources.html" class="nav-link" style="color: var(--primary);">Resources</a>
+                <a href="../resources.html" class="nav-link" style="color: var(--moss); font-weight: 800;">Resources</a>
                 <a href="../contact.html" class="nav-link">Contact</a>
             </nav>
 
